--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
-                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2024.123198" target="_blank">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
                               <strong>"Unsupervised Feature Selection using Orthogonal Encoder-Decoder Factorization"</strong></a> 
                               <br>
                               M. Mozafari, <u>A. Seyedi</u>, R. Pir Mohammadiani, and F. Akhlaghian  
