--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
                               <strong>"Unsupervised Feature Selection using Orthogonal Encoder-Decoder Factorization"</strong></a> 
                               <br>
-                              M. Mozafari, <u>A. Seyedi</u>, R. Pir Mohammadiani, and F. Akhlaghian  
+                              M. Mozafari, <u>A. Seyedi</u>, R. Pir Mohammadiani, and F. Akhlaghian,  
                               <span style="color:#a69d76;">    Information Sciences 2024.
                               </span>
                               </span>
@@ -296,7 +296,7 @@
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2024.123198" target="_blank">
                               <strong>"Multi-label feature selection with global and local label correlation"</strong></a> 
                               <br>
-                              M. Faraji, <u>A. Seyedi</u>, F. Akhlaghian, and R. Mahmoodi  
+                              M. Faraji, <u>A. Seyedi</u>, F. Akhlaghian, and R. Mahmoodi, 
                               <span style="color:#a69d76;">    Expert Systems with Applications 2024.
                               </span>
                               </span>
