--- a/Publication.html
+++ b/Publication.html
@@ -23,7 +23,9 @@
   
   <li><a href="http://amjadseyedi.github.io/Pubs/2023 - Link Prediction by Adversarial Nonnegative Matrix Factorization.pdf" target="_blank">2023 - Link Prediction by Adversarial Nonnegative Matrix Factorization</a></li>
   
-  <li><a href="http://amjadseyedi.github.io/Pubs/First Revision -Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering.pdf" target="_blank">First Revision -Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering</a></li>
+  <li><a href="http://amjadseyedi.github.io/Pubs/2024 - Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering.pdf" target="_blank">2024 - Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering</a></li>
+  
+  <li><a href="http://amjadseyedi.github.io/Pubs/2024 - Multi-Label Feature Selection with Global and Local Label Correlation.pdf" target="_blank">2024 - Multi-Label Feature Selection with Global and Local Label Correlation</a></li>
   
   
 </ul> 
