--- a/index.html
+++ b/index.html
@@ -289,6 +289,21 @@
                         </div>
                     </div>
 
+
+			<div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
+                              <strong>"Towards Cohesion-Fairness Harmony: Contrastive Regularization in Individual Fair Graph Clustering"</strong></a> 
+                              <br>
+                              S. Ghodsi, <u>A. Seyedi</u>, and E. Ntoutsi,  
+                              <span style="color:#a69d76;">    Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD2024).
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+			
 			
 			<div class="">
                         <div class="">
