--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
-                              <strong>"Unsupervised Feature Selection using Orthogonal Encoder-Decoder Factorization"</strong></a> 
+                              <strong>Unsupervised Feature Selection using Orthogonal Encoder-Decoder Factorization</strong></a> 
                               <br>
                               M. Mozafari, <u>A. Seyedi</u>, R. Pir Mohammadiani, and F. Akhlaghian,  
                               <span style="color:#a69d76;">    Information Sciences 2024.
@@ -294,10 +294,10 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
-                              <strong>"Towards Cohesion-Fairness Harmony: Contrastive Regularization in Individual Fair Graph Clustering"</strong></a> 
+                              <strong>Towards Cohesion-Fairness Harmony: Contrastive Regularization in Individual Fair Graph Clustering</strong></a> 
                               <br>
                               S. Ghodsi, <u>A. Seyedi</u>, and E. Ntoutsi,  
-                              <span style="color:#a69d76;">    Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD2024).
+                              <span style="color:#a69d76;">Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD2024).
                               </span>
                               </span>
                             </div>
@@ -309,10 +309,10 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2024.123198" target="_blank">
-                              <strong>"Multi-label feature selection with global and local label correlation"</strong></a> 
+                              <strong>Multi-label feature selection with global and local label correlation</strong></a> 
                               <br>
                               M. Faraji, <u>A. Seyedi</u>, F. Akhlaghian, and R. Mahmoodi, 
-                              <span style="color:#a69d76;">    Expert Systems with Applications 2024.
+                              <span style="color:#a69d76;">Expert Systems with Applications 2024.
                               </span>
                               </span>
                             </div>
@@ -324,7 +324,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.patcog.2023.110179" target="_blank">
-                              <strong>"Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering"</strong></a> 
+                              <strong>Deep Asymmetric Nonnegative Matrix Factorization for Graph Clustering</strong></a> 
                               <br>
                               A. Hajiveiseh, <u>A. Seyedi</u>, and F. Akhlaghian, 
                               <span style="color:#a69d76;">    Pattern Recognition 2024.
@@ -339,7 +339,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.knosys.2023.110998" target="_blank">
-                              <strong>"Link Prediction by Adversarial Nonnegative Matrix Factorization"</strong></a> 
+                              <strong>Link Prediction by Adversarial Nonnegative Matrix Factorization</strong></a> 
                               <br>
                               R. Mahmoodi, <u>A. Seyedi</u>, F. Akhlaghian, and A. Abdollahpouri, 
                               <span style="color:#a69d76;">Knowledge-Based Systems 2023.
@@ -353,7 +353,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.patcog.2022.109282" target="_blank">
-                              <strong>"Self-Supervised Semi-Supervised Nonnegative Matrix Factorization for Data Clustering"</strong></a> - 
+                              <strong>Self-Supervised Semi-Supervised Nonnegative Matrix Factorization for Data Clustering</strong></a> - 
                               <a style="color:initial;" href="https://github.com/ChavoshiNejad/S4NMF" target="_blank">[source code]</a><br>
                               J. Chavoshinejad, <u>A. Seyedi</u>, F. Akhlaghian, and N. Salahian, 
                               <span style="color:#a69d76;">Pattern Recognition 2023.
@@ -367,7 +367,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.ins.2022.11.120" target="_blank">
-                              <strong>"Elastic Adversarial Deep Nonnegative Matrix Factorization for Matrix Completion"</strong></a> - 
+                              <strong>Elastic Adversarial Deep Nonnegative Matrix Factorization for Matrix Completion</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/EADNMF" target="_blank">[source code]</a><br>
                               <u>A. Seyedi</u>, F. Akhlaghian, A. Lotfi, N. Salahian, and J. Chavoshinejad, 
                               <span style="color:#a69d76;">Information Sciences 2023.</span>
@@ -380,7 +380,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.eswa.2022.119051" target="_blank">
-                              <strong>"Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation"</strong></a> - 
+                              <strong>Deep Autoencoder-like NMF with Contrastive Regularization and Feature Relationship Preservation</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/DANMF_CRFR" target="_blank">[source code]</a><br>
                               N. Salahian, F. Akhlaghian, <u>A. Seyedi</u>, and J. Chavoshinejad, 
                               <span style="color:#a69d76;">Expert Systems with Applications 2023.
@@ -394,7 +394,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1109/ICCKE50421.2020.9303649" target="_blank">
-                              <strong>"Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering"</strong></a> - 
+                              <strong>Asymmetric Semi-Nonnegative Matrix Factorization for Directed Graph Clustering</strong></a> - 
                               <a style="color:initial;" href="https://github.com/amjadseyedi/RAsNMF" target="_blank">[source code]</a><br>
                               R. Abdollahi, <u>A. Seyedi</u>, and M.R. Noorimehr, 
                               <span style="color:#a69d76;">IEEE International Conference on Computer and Knowledge Engineering (ICCKE) 2020.
@@ -408,7 +408,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a style="color:#006747" href="http://proceedings.mlr.press/v101/seyedi19a.html" target="_blank">
-                                <strong>"Self-Paced Multi-Label Learning with Diversity"</strong></a> -
+                                <strong>Self-Paced Multi-Label Learning with Diversity</strong></a> -
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/SPMLD" target="_blank">[source code]</a><br>
                                 <u>A. Seyedi</u>, S. Ghodsi, F. Akhlaghian, M. Jalili, and P. Moradi, 
                                 <span style="color:#a69d76;">Asian Conference on Machine Learning 2019.
@@ -422,7 +422,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1016/j.eswa.2018.07.075" target="_blank">
-                                <strong>"Dynamic Graph-based Label Propagation for Density Peaks Clustering"</strong></a> - 
+                                <strong>Dynamic Graph-based Label Propagation for Density Peaks Clustering</strong></a> - 
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/DPC-DLP" target="_blank">[source code]</a><br>
                                 <u>A. Seyedi</u>, A. Lotfi, P. Moradi, and N.N. Qader, 
                                 <span style="color:#a69d76;">Expert Systems with Applications 2019.
@@ -436,7 +436,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/AISP.2017.8324084" target="_blank">
-                                <strong>"A Weakly-Supervised Factorization Method with Dynamic Graph Embedding"</strong></a><br>
+                                <strong>A Weakly-Supervised Factorization Method with Dynamic Graph Embedding</strong></a><br>
                                 <u>A. Seyedi</u>, P. Moradi, and F. Akhlaghian Tab, 
                                 <span style="color:#a69d76;">IEEE Artificial Intelligence and Signal Processing Conference (AISP) 2017.
                                 </span>
@@ -449,7 +449,7 @@
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/IranianCEE.2017.7985435" target="_blank">
-                                <strong>"A Clustering-based Matrix Factorization Method to Improve the Accuracy of Recommendation Systems"</strong></a><br>
+                                <strong>A Clustering-based Matrix Factorization Method to Improve the Accuracy of Recommendation Systems</strong></a><br>
                                 Z. Shajarian, <u>A. Seyedi</u>, and P. Moradi, 
                                 <span style="color:#a69d76;">IEEE Iranian Conference on Electrical Engineering (ICEE) 2017.
                                 </span>
@@ -462,7 +462,7 @@
                       <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                                 <span class="caption text" style="font-size:14px"><a href="https://doi.org/10.1109/ICCKE.2016.7802150" target="_blank">
-                                <strong>"An Improved Density Peaks Method for Data Clustering"</strong></a> - 
+                                <strong>An Improved Density Peaks Method for Data Clustering</strong></a> - 
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/IDPC" target="_blank">[source code]</a><br>
                                 A. Lotfi, <u>A. Seyedi</u>, and P. Moradi, 
                                 <span style="color:#a69d76;">IEEE International Conference on Computer and Knowledge Engineering (ICCKE) 2016.</span>
