--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                               <strong>Towards Cohesion-Fairness Harmony: Contrastive Regularization in Individual Fair Graph Clustering</strong></a> 
                               <br>
                               S. Ghodsi, <u>A. Seyedi</u>, and E. Ntoutsi,  
-                              <span style="color:#a69d76;">Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD2024).
+                              <span style="color:#a69d76;">Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD) 2014.
                               </span>
                               </span>
                             </div>
@@ -411,7 +411,7 @@
                                 <strong>Self-Paced Multi-Label Learning with Diversity</strong></a> -
                                 <a style="color:initial;" href="https://github.com/amjadseyedi/SPMLD" target="_blank">[source code]</a><br>
                                 <u>A. Seyedi</u>, S. Ghodsi, F. Akhlaghian, M. Jalili, and P. Moradi, 
-                                <span style="color:#a69d76;">Asian Conference on Machine Learning 2019.
+                                <span style="color:#a69d76;">Asian Conference on Machine Learning (ACML) 2019.
                                 </span>
                                 </span>
                             </div>
