--- a/index.html
+++ b/index.html
@@ -275,22 +275,9 @@
                 <div class="col-lg-11 col-sm-0">
                    <!-- Testimonial -->
 
-			<div class="">
-                        <div class="">
-                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
-                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
-                              <strong>Unsupervised Feature Selection using Orthogonal Encoder-Decoder Factorization</strong></a> 
-                              <br>
-                              M. Mozafari, <u>A. Seyedi</u>, R. Pir Mohammadiani, and F. Akhlaghian,  
-                              <span style="color:#a69d76;">    Information Sciences 2024.
-                              </span>
-                              </span>
-                            </div>
-                        </div>
-                    </div>
 
 
-			<div class="">
+<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
@@ -303,6 +290,24 @@
                             </div>
                         </div>
                     </div>
+
+			
+			<div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.ins.2024.120277" target="_blank">
+                              <strong>Unsupervised Feature Selection using Orthogonal Encoder-Decoder Factorization</strong></a> 
+                              <br>
+                              M. Mozafari, <u>A. Seyedi</u>, R. Pir Mohammadiani, and F. Akhlaghian,  
+                              <span style="color:#a69d76;">    Information Sciences 2024.
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+
+
+			
 			
 			
 			<div class="">
