--- a/index.html
+++ b/index.html
@@ -275,9 +275,36 @@
                 <div class="col-lg-11 col-sm-0">
                    <!-- Testimonial -->
 
+			<div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
+                              <strong>Diverse Joint Nonnegative Matrix Tri-Factorization for Attributed Graph Clustering</strong></a> 
+                              <br>
+                              A. Mohammadi, <u>A. Seyedi</u>, F. Akhlaghian, and R. Pir Mohammadiani,  
+                              <span style="color:#a69d76;">Applied Soft Computing 2024.
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
 
 
-<div class="">
+			<div class="">
+                        <div class="">
+                            <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
+                              <strong>Enhancing Link Prediction through Adversarial Training in Deep Nonnegative Matrix Factorization</strong></a> 
+                              <br>
+                              R. Mahmoodi, <u>A. Seyedi</u>, A. Abdollahpouri, and F. Akhlaghian,  
+                              <span style="color:#a69d76;">Engineering Applications of Artificial Intelligence 2024.
+                              </span>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+
+			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
                               <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://arxiv.org/abs/2402.10756" target="_blank">
