--- a/index.html
+++ b/index.html
@@ -517,7 +517,12 @@
                 <div class="timeline">
 		    
 
-			
+		    <div class="timeline-event te-primary">
+                        <span class="event-name">PhD, Jun 2024 - Jun 2028</span>
+                        <span class="event-name"><h5 class="text-tertiary margin-b-0">Applied Mathematics and Operational Research</h5></span>
+                        <span class="event-description" style="color:#a69d76;">University of Mons, Mons, Belgium</span>
+                    </div>
+                        <!-- Single event -->	
                     <div class="timeline-event te-primary">
                         <span class="event-name">Master's Degree, Sep 2015 - Feb 2018</span>
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Artificial Intelligence</h5></span>
