--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 			<div class="">
                         <div class="">
                             <div class="" style="line-height:1.1; margin-bottom:15px; margin-top:15px">
-                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://" target="_blank">
+                              <span class="caption text" style="font-size:14px"><a style="color:#006747" href="https://doi.org/10.1016/j.engappai.2024.108641" target="_blank">
                               <strong>Enhancing Link Prediction through Adversarial Training in Deep Nonnegative Matrix Factorization</strong></a> 
                               <br>
                               R. Mahmoodi, <u>A. Seyedi</u>, A. Abdollahpouri, and F. Akhlaghian,  
