--- a/index.html
+++ b/index.html
@@ -732,10 +732,10 @@
             <h1><strong>contact me</strong>!</h1>
             <!-- Contact List -->
             <ul class="list-unstyled list-unstyled-icons">
-                <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Office No. 222<br>Department of Computer
-                 Engineering<br>Faculty of Engineering<br>University of Kurdistan<br>Sanandaj, Kurdistan, Iran<br>
+                <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Department of Mathematics and Operational Research<br>Polytech Mons<br>University of Mons<br>
+			7000 Mons, Belgium<br>
                 
-                <a style="color:inherit" href="mailto:amjadseyedi@uok.ac.ir">amjadseyedi@uok.ac.ir</a></li>
+                <a style="color:inherit" href="mailto:seyedamjad.seyedi@umons.ac.be">seyedamjad.seyedi@umons.ac.be</a></li>
             </ul>
             <ul class="list-inline">
                 <li><a href="https://www.linkedin.com/in/AmjadSeyedi/" target="_blank" class="icon icon-circle icon-xs icon-linkedin">
