--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                         <div class="testimonial-author testimonial">
                             <div class="testimonial-author-txt" style="line-height:1.3; ">
 			    <span class="caption text" style="font-size:16px"><a style="color:#006747">
-                              <strong>Current Students</strong></a>
+                              <strong>Advisees</strong></a>
                               </span>
 				    
                               <span class="event-name" style="font-size:14px">
@@ -679,8 +679,6 @@
 				<br>
 				[Master] Sarina Khaledian (Supervisor: Dr. Akhlaghian) | 2022-Present 
 				<br>
-				[Master] Sayvan Soleymanbeigi (Supervisors: Dr. Daneshfar &amp; Dr. Akhlaghian) | 2022-Present
-				<br>
 				[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian) | 2023-Present
                               </span>
                             </div>
@@ -691,18 +689,21 @@
                         <div class="testimonial-author testimonial">
                             <div class="testimonial-author-txt" style="line-height:1.3; ">
                               <span class="caption text" style="font-size:16px"><a style="color:#006747">
-                              <strong>Alumni</strong></a> 
+                              <strong>Mentees</strong></a> 
                               </span>
 
 			      <span class="event-name" style="font-size:14px">
-                              <br>
+                              <be>
+			<font color="#555555">	      
+				[Master] Sayvan Soleymanbeigi (Supervisors: Dr. Daneshfar &amp; Dr. Akhlaghian) | 2022-2023
+				<br>      
                               [Master] Setare Mohammadi (Supervisor: Dr. Akhlaghian) | 2021-2023 
 				<br>
 				[Master] Mohammad Faraji (Supervisor: Dr. Akhlaghian) | 2021-2023 
 				<br>
 				[Master] Arina Mohammadi (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2022-2023 
 				<br>
-				[Master] Akram Hajiveiseh (Supervisors: Dr. Akhlaghian) | 2020-2023 
+				[Master] Akram Hajiveiseh (Supervisor: Dr. Akhlaghian) | 2020-2023 
 				<br>
 				[Master] Reza Mahmoodi (Supervisors: Dr. Abdollahpouri &amp; Dr. Akhlaghian) | 2021-2022 
 				<br>
@@ -712,7 +713,8 @@
 				<br>
 				[Master] Maryam Mozafari (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2021-2022
 				<br>
-				[Master] Negar Hadipour (Supervisor: Dr. Moradi - Co-Advisor: Dr. Akhlaghian) | 2017-2019
+				[Master] Negar Hadipour (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) | 2017-2019
+			</font>font>
                               </span>
                             </div>
                         </div>
