--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                 <div class="timeline">
                     <div class="timeline-event te-primary" style="padding-bottom:20px">
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Team Leader & Thesis Advisor</h5></span>
-                        <span class="event-name">Algebriac Machine Learning (PhD & MSc), 2020 - present</span>
+                        <span class="event-name">Algebriac Machine Learning (PhD & MSc), 2020 - 2024</span>
                         <span class="event-description">Algebraic Machine Learning Team, University of Kurdistan, Iran (Supervisor: Dr. Fardin Akhlaghian)</span>
                         <!--<label for="modal">
                             <span class="caption text" style="font-size:14px; color:#3aa8db">
@@ -580,7 +580,7 @@
 
                     <div class="timeline-event te-primary" style="padding-bottom:20px">
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Graduate Research Assistant</h5></span>
-                        <span class="event-name">Machine Learning, 2019 - present</span>
+                        <span class="event-name">Machine Learning, 2019 - 2024</span>
                         <span class="event-description">Representation Learning Lab, University of Kurdistan, Iran</span>
                     </div>
 
@@ -670,31 +670,9 @@
                               </span>
 				    
                               <span class="event-name" style="font-size:14px">
-				<br>      
-                              [PhD] Wafa Barkhoda (Supervisor: Dr. Akhlaghian) | 2022-Present
-				<br>
-				[PhD] Reza Mahmoodi (Supervisor: Dr. Akhlaghian) | 2022-Present
-				<br>
-				[Master] M. Soran Karimi (Supervisor: Dr. Akhlaghian) | 2022-Present
 				<br>
 				[Master] Sarina Khaledian (Supervisor: Dr. Akhlaghian) | 2022-Present 
-				<br>
-				[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian) | 2023-Present
-                              </span>
-                            </div>
-                        </div>
-                    </div>
-
-		    <div class="testimonial testimonial-dark">
-                        <div class="testimonial-author testimonial">
-                            <div class="testimonial-author-txt" style="line-height:1.3; ">
-                              <span class="caption text" style="font-size:16px"><a style="color:#006747">
-                              <strong>Mentees</strong></a> 
-                              </span>
-
-			      <span class="event-name" style="font-size:14px">
-                              <be>
-			<font color="#555555">	      
+				<font color="#555555">	      
 				[Master] Sayvan Soleymanbeigi (Supervisors: Dr. Daneshfar &amp; Dr. Akhlaghian) | 2022-2023
 				<br>      
                               [Master] Setare Mohammadi (Supervisor: Dr. Akhlaghian) | 2021-2023 
@@ -710,11 +688,37 @@
 				[Master] Jovan Chavoshinejad (Supervisor: Dr. Akhlaghian) | 2020-2022 
 				<br>
 				[Master] Navid Salahian (Supervisor: Dr. Akhlaghian) | 2020-2022 
+				
+			</font>
+                              </span>
+                            </div>
+                        </div>
+                    </div>
+
+		    <div class="testimonial testimonial-dark">
+                        <div class="testimonial-author testimonial">
+                            <div class="testimonial-author-txt" style="line-height:1.3; ">
+                              <span class="caption text" style="font-size:16px"><a style="color:#006747">
+                              <strong>Mentees</strong></a> 
+                              </span>
+
+			      <span class="event-name" style="font-size:14px">
+			      <br>      
+                              [PhD] Wafa Barkhoda (Supervisor: Dr. Akhlaghian) | 2022-Present
 				<br>
+				[PhD] Reza Mahmoodi (Supervisor: Dr. Akhlaghian) | 2022-Present
+			      <br>
+				[Master] Negin Jabbari (Supervisor: Dr. Akhlaghian) | 2023-Present
+			      <br>
+				[Master] Zahra Mohseni Rad (Supervisor: Dr. Akhlaghian) | 2023-Present
+			      <br>
+				[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian) | 2023-Present
+                              <br>
+			<font color="#555555">	
 				[Master] Maryam Mozafari (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2021-2022
 				<br>
 				[Master] Negar Hadipour (Supervisor: Dr. Moradi - Advisor: Dr. Akhlaghian) | 2017-2019
-			</font>font>
+			</font>
                               </span>
                             </div>
                         </div>
