--- a/index.html
+++ b/index.html
@@ -708,11 +708,11 @@
 				<br>
 				[PhD] Reza Mahmoodi (Supervisor: Dr. Akhlaghian) | 2022-Present
 			      <br>
-				[Master] Negin Jabbari (Supervisor: Dr. Akhlaghian) | 2023-Present
+				[Master] Negin Jabbari (Supervisor: Dr. Akhlaghian - Advisor: Reza Mahmoodi) | 2023-Present
 			      <br>
-				[Master] Zahra Mohseni Rad (Supervisor: Dr. Akhlaghian) | 2023-Present
+				[Master] Zahra Mohseni Rad (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) | 2023-Present
 			      <br>
-				[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian) | 2023-Present
+				[Master] Shirin Moradi (Supervisor: Dr. Akhlaghian - Advisor: Wafa Barkhoda) | 2023-Present
                               <br>
 			<font color="#555555">	
 				[Master] Maryam Mozafari (Supervisors: Dr. Pir Mohammadiani &amp; Dr. Akhlaghian) | 2021-2022
