--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                 <div class="timeline">
                     <div class="timeline-event te-primary" style="padding-bottom:20px">
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Team Leader & Thesis Advisor</h5></span>
-                        <span class="event-name">Algebriac Machine Learning (PhD & MSc), 2020 - 2024</span>
+                        <span class="event-name">Algebriac Machine Learning (PhD & MSc), Sep 2020 - Jun 2024</span>
                         <span class="event-description">Algebraic Machine Learning Team, University of Kurdistan, Iran (Supervisor: Dr. Fardin Akhlaghian)</span>
                         <!--<label for="modal">
                             <span class="caption text" style="font-size:14px; color:#3aa8db">
@@ -580,7 +580,7 @@
 
                     <div class="timeline-event te-primary" style="padding-bottom:20px">
                         <span class="event-name"><h5 class="text-tertiary margin-b-0">Graduate Research Assistant</h5></span>
-                        <span class="event-name">Machine Learning, 2019 - 2024</span>
+                        <span class="event-name">Machine Learning, Sep 2019 - Jun 2024</span>
                         <span class="event-description">Representation Learning Lab, University of Kurdistan, Iran</span>
                     </div>
 
