--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                             <span class="caption text" style="font-size:14px; color:#3aa8db">
                             <strong class="blurp"  style="color:#006747; margin-bottom:-20px">Students</strong></span> 
                         </label> -->
-			    <a href="students.html" target="_blank"><span class="caption text" style="font-size:14px; color:#3aa8db">
+			    <a href="https://amjadseyedi.github.io/#students" target="_blank"><span class="caption text" style="font-size:14px; color:#3aa8db">
                             <strong class="blurp"  style="color:#006747; margin-bottom:-20px">Students</strong></span> </a>
                     </div>
 			
