--- a/index.html
+++ b/index.html
@@ -255,10 +255,12 @@
                         <h4 style="margin-bottom:10px"><strong>Research Interests</strong></h4>
                         <ul style="margin-top:10px; margin-bottom:10px; font-size:18px" class="lead" >
                             
-                            <li>Machine learning, Representation learning, Linear algebra</li>
-                            <li>Deep learning, Self-supervised/Semi-supervised learning</li>
-                            <li>Generalization, Adversarial training, Robust learning</li>
-                            <li>Computer vision, Multi-view Learning, Recommendation</li>
+                            <li>matrix factorization, low-rank approximation, ?</li>
+	                    <li>linear algebra, optimization, ?</li>
+				<li>machine learning, representation learning, ?</li>
+                            <li>deep learning, unsupervised learning, self-/semi-supervised learning</li>
+                            <li>generalization, robustness, interpretebility</li>
+                            <li>multi-view Learning, recommendation, remote sensing</li>
                         </ul> 
                     </div>
                 </div>
