--- a/index.html
+++ b/index.html
@@ -255,12 +255,11 @@
                         <h4 style="margin-bottom:10px"><strong>Research Interests</strong></h4>
                         <ul style="margin-top:10px; margin-bottom:10px; font-size:18px" class="lead" >
                             
-                            <li>matrix factorization, low-rank approximation, ?</li>
-	                    <li>linear algebra, optimization, ?</li>
-				<li>machine learning, representation learning, ?</li>
-                            <li>deep learning, unsupervised learning, self-/semi-supervised learning</li>
-                            <li>generalization, robustness, interpretebility</li>
-                            <li>multi-view Learning, recommendation, remote sensing</li>
+                            <li><b>Math:</b> linear algebra, numerical analysis, optimization</li>
+			<li><b>Applied math:</b> low-rank approximation, matrix factorization, tensor factorization</li>
+			<li><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning</li>
+			<li><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</li>
+			<li><b>Applications:</b> remote sensing, recommendation, multi-view Learning </li>
                         </ul> 
                     </div>
                 </div>
