--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 			<li><b>Applied math:</b> low-rank approximation, matrix factorization, tensor factorization</li>
 			<li><b>Machine Learning:</b> representation learning, deep learning, unsupervised learning</li>
 			<li><b>Trustworthy ML:</b> generalization, robustness, interpretability, fairness</li>
-			<li><b>Applications:</b> remote sensing, recommendation, multi-view Learning </li>
+			<li><b>Applications:</b> remote sensing, recommendation, multi-view learning </li>
                         </ul> 
                     </div>
                 </div>
