--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- CSS Template
     <link rel="stylesheet" href="assets/css/theme.css" /> -->
-    <link rel="stylesheet" href="assets/css/color/green-orange.css" id="color" />
+    <link rel="stylesheet" href="assets/css/color/umons.css" id="color" />
     
     <style>
         p {
